--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,11 @@
 
 .App {
   text-align: center;
+  background-color: var(--color-blue);
+  min-height: 100vh;
+  min-width: 100vh;
+}
+
+.AppLayout {
+  min-height: 100vh;
 }
